--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -24,6 +24,7 @@ retrofit = "2.9.0"
 swiperefreshlayout = "1.1.0"
 threetenabp = "1.4.6"
 volley = "1.2.1"
+coreSplashscreen = "1.0.1"
 
 [libraries]
 activity-v1101 = { module = "androidx.activity:activity", version.ref = "activityVersion" }
@@ -53,6 +54,7 @@ retrofit = { module = "com.squareup.retrofit2:retrofit", version.ref = "retrofit
 swiperefreshlayout = { group = "androidx.swiperefreshlayout", name = "swiperefreshlayout", version.ref = "swiperefreshlayout" }
 threetenabp = { module = "com.jakewharton.threetenabp:threetenabp", version.ref = "threetenabp" }
 volley = { module = "com.android.volley:volley", version.ref = "volley" }
+core-splashscreen = { group = "androidx.core", name = "core-splashscreen", version.ref = "coreSplashscreen" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
