--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,30 +6,31 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
+        android:name=".LiveScoreApplication"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/ic_logo"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@drawable/ic_logo"
         android:supportsRtl="true"
         android:theme="@style/Theme.YourAppTheme"
         tools:targetApi="31">
 
         <activity
             android:name=".Activities.SplashActivity"
-            android:theme="@style/SplashTheme"
-            android:exported="true">
+            android:exported="true"
+            android:theme="@style/SplashTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".Activities.UserInforActivity"
-            android:exported="false"
-            android:configChanges="uiMode" />
+            android:configChanges="uiMode"
+            android:exported="false" />
         <activity
             android:name=".Activities.LoginActivity"
             android:configChanges="uiMode" />
@@ -38,8 +39,8 @@
             android:configChanges="uiMode" />
         <activity
             android:name=".Activities.MainActivity"
-            android:exported="true"
-            android:configChanges="uiMode" />
+            android:configChanges="uiMode"
+            android:exported="true" />
 
         <meta-data
             android:name="com.google.firebase.auth.API_KEY"
