--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,10 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+    <uses-permission android:name="android.permission.SCHEDULE_EXACT_ALARM" /> <!-- For Android 12+ -->
+    <uses-permission android:name="android.permission.USE_EXACT_ALARM" />
 
     <application
         android:name=".LiveScoreApplication"
@@ -14,9 +18,16 @@
         android:label="@string/app_name"
         android:roundIcon="@drawable/ic_logo"
         android:supportsRtl="true"
-        android:theme="@style/Theme.YourAppTheme"
+        android:theme="@style/Theme.LiveScore"
         tools:targetApi="31">
-
+        <activity
+            android:name=".Activities.MatchDetailsActivity"
+            android:configChanges="uiMode"
+            android:exported="false" />
+        <activity
+            android:name=".Activities.NotificationsActivity"
+            android:configChanges="uiMode"
+            android:exported="false" />
         <activity
             android:name=".Activities.SplashActivity"
             android:exported="true"
@@ -33,14 +44,20 @@
             android:exported="false" />
         <activity
             android:name=".Activities.LoginActivity"
-            android:configChanges="uiMode" />
+            android:configChanges="uiMode"
+            android:exported="false" />
         <activity
             android:name=".Activities.RegisterActivity"
-            android:configChanges="uiMode" />
+            android:configChanges="uiMode"
+            android:exported="false" />
         <activity
             android:name=".Activities.MainActivity"
             android:configChanges="uiMode"
             android:exported="true" />
+
+        <receiver
+            android:name=".Utils.NotificationReceiver"
+            android:exported="false" />
 
         <meta-data
             android:name="com.google.firebase.auth.API_KEY"
